# Project-Argus

./: .gitignore  Context.md  README.md  context.md
.github/workflows/: build-ingestion-image.yml  ci.yml
agents/: compliance_graph.py  orchestrator.py  requirements.txt
dashboards/: argus_fraud_dashboard.twb  export_tableau_extract.py
data/: requirements.txt
data/scripts/: acquire_ieee_cis.py  eda_report.py  export_ingestion_jsonl.py  graph_schema.py  ring_injector.py
docs/: ENGINEERING_JOURNEY.md
docs/architecture/: architecture_diagram.md  chunk1_data_eda_summary.md  example_sar_draft.md  final_resource_inventory.md  observability_queries.md  partition_key_strategy.md
docs/specs/: PDD_Production_Guide.md  POC_Blueprint.md
graph/: loader.py  requirements.txt
infra/envs/dev/: .terraform.lock.hcl  container_registry.tf  enterprise_benchmark.tf  ingestion_app.tf  main.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
ingestion/: .dockerignore  Cargo.toml  Dockerfile
ingestion/examples/: eventhub_validate.rs
ingestion/src/: event_hub_sink.rs  lib.rs  main.rs
ml/: model_def.py  requirements.txt
ml/artifacts/: feature_stats.json  model.pt  model_config.json
ml/inference/: batch_score_accounts.py  inference_service.py  prepare_validation_events.py
ml/training/: eval_full_scale.py  features.py  train_gnn.py
tests/: conftest.py  requirements.txt
tests/load/: eventhub_marker.py
tests/unit/: test_ingestion_fallbacks.py  test_loader_clean_props.py  test_loader_token_refresh.py  test_pii_hashing.py  test_ring_injection.py
(+17 files in other folders)
