[package]
name = "ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
sha2 = "0.10"
azure_messaging_eventhubs = "0.15"
azure_identity = "1.0"
azure_core = "1.0"
azure_security_keyvault_secrets = "1.0"

[dev-dependencies]
tempfile = "3"
futures = "0.3"
